# tone-generator

./: CMakeLists.txt  README.md  main.c  main.h  minicom.sh
solution/: CMakeLists.txt  main.c
